force-app/main/default/objects/Affiliation__c/Affiliation__c.object-meta.xml
<CustomObject>
    <description>Custom object to track a contact to account relationship, where the contact is directly related to the account.</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Affiliation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>