force-app/main/default/objects/Affiliation__c/fields/Affiliation_Title__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Title__c</fullName>
    <label>Affiliation Title</label>
    <type>TextArea</type>
</CustomField>