force-app/main/default/objects/Affiliation__c/fields/Committees__c.field-meta.xml
<CustomField>
    <fullName>Committees__c</fullName>
    <label>Committees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Audit-Chair</fullName>
            </value>
            <value>
                <fullName>Audit-Member</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Nominating</fullName>
            </value>
            <value>
                <fullName>Outside Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>