force-app/main/default/objects/Affiliation__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; Contact__r.LastName&amp; &quot;,&quot; &amp; Contact__r.FirstName, &quot;&quot;, &quot;_parent&quot;) &amp;
HYPERLINK(&quot;/&quot;&amp;Contact__r.Id , Contact__r.LastName+&quot;, &quot;+Contact__r.FirstName, &apos;_parent&apos;)</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>