force-app/main/default/objects/Affiliation__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner (Less than 10%)</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Director of Alumni Development</fullName>
            </value>
            <value>
                <fullName>Passive member</fullName>
            </value>
            <value>
                <fullName>Member of board of directors</fullName>
            </value>
            <value>
                <fullName>Board member</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>President/Owner</fullName>
            </value>
            <value>
                <fullName>Director - advisory board</fullName>
            </value>
            <value>
                <fullName>Board of directors - Treasurer</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Independent director</fullName>
            </value>
            <value>
                <fullName>Founder and board member</fullName>
            </value>
            <value>
                <fullName>Owned by husband. Single member LLC. I am not an owner.</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>LLC member</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Board Director</fullName>
            </value>
            <value>
                <fullName>Leadership board member</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Board of advisors member</fullName>
            </value>
            <value>
                <fullName>Chairman of the Board</fullName>
            </value>
            <value>
                <fullName>Advisory Board President</fullName>
            </value>
            <value>
                <fullName>Research Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>