force-app/main/default/objects/Affiliation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Former Employee</fullName>
            </value>
            <value>
                <fullName>Inside Board Member</fullName>
            </value>
            <value>
                <fullName>Other Advisor</fullName>
            </value>
            <value>
                <fullName>Other Employer</fullName>
            </value>
            <value>
                <fullName>Outside Board Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>