force-app/main/default/objects/Affiliation__c/validationRules/Affiliation_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Affiliation_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.RecordType.DeveloperName = &apos;Houlihan_Employee&apos; &amp;&amp;
 ($Profile.Name != &apos;Compliance User&apos; &amp;&amp;
 $Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Only Compliance can add HL Employees as affiliations.</errorMessage>
</ValidationRule>